# regulations-analyzer

./: 0_agencies_etl.ipynb  0_contents_etl.ipynb  0_corrections_etl.ipynb  0_sections_etl.ipynb  1_word_counts_etl.ipynb  2_word_count_by_agency.ipynb  3_upload.ipynb  README.md  REAMDE.md  pyproject.toml
